# draft-rpki-checklists

./: .buildinfo  .gitignore  Makefile  README.md  RpkiSignedChecklist-2021.asn  RpkiSignedChecklist-2021.patch  RpkiSignedChecklist-2022.asn  api.html  draft-ietf-sidrops-rpki-rsc-03-from-.diff.html  draft-ietf-sidrops-rpki-rsc.exp.xml  draft-ietf-sidrops-rpki-rsc.html  draft-ietf-sidrops-rpki-rsc.txt  draft-ietf-sidrops-rpki-rsc.xml  draft-spaghetti-sidrops-rpki-rsc.html  draft-spaghetti-sidrops-rpki-rsc.txt  draft-spaghetti-sidrops-rpki-rsc.xml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rfc9323.xml  rsc-RpkiSignedChecklist-2021.asn1  rsc-RpkiSignedChecklist-2021.dtd  search.html  searchindex.js  setup.cfg  tox.ini  xml2rfc-version-index.html
.doctrees/: api.doctree  environment.pickle  index.doctree
.doctrees/_xml2rfc/: toc-draft-ietf-sidrops-rpki-rsc-branches.doctree  toc-draft-ietf-sidrops-rpki-rsc-diffs.doctree  toc-draft-ietf-sidrops-rpki-rsc-tags.doctree  toc-draft-ietf-sidrops-rpki-rsc.doctree  toc.doctree
.github/workflows/: cicd.yml
_sources/: api.md.txt
_sources/_xml2rfc/: toc-draft-ietf-sidrops-rpki-rsc-branches.md.txt  toc-draft-ietf-sidrops-rpki-rsc-diffs.md.txt  toc-draft-ietf-sidrops-rpki-rsc-tags.md.txt  toc-draft-ietf-sidrops-rpki-rsc.md.txt  toc.md.txt
_static/: documentation_options.js
_xml2rfc/: toc-draft-ietf-sidrops-rpki-rsc-branches.html  toc-draft-ietf-sidrops-rpki-rsc-diffs.html  toc-draft-ietf-sidrops-rpki-rsc-tags.html  toc-draft-ietf-sidrops-rpki-rsc.html  toc.html
_xml2rfc/refs/heads/main/: draft-ietf-sidrops-rpki-rsc-diff-from-tags.03.html  draft-ietf-sidrops-rpki-rsc-diff-from-tags.04.html  draft-ietf-sidrops-rpki-rsc-diff-from-tags.05.html  draft-ietf-sidrops-rpki-rsc-diff-from-tags.06.html  draft-ietf-sidrops-rpki-rsc-diff-from-tags.09.html  draft-ietf-sidrops-rpki-rsc-diff-from-tags.10.html  (+2 more)
docs/: api.md  conf.py  drafts.md  index.md
docs/_extensions/: sphinx_xml2rfc.py
drafts/: draft-ietf-sidrops-rpki-rsc.exp.xml  draft-ietf-sidrops-rpki-rsc.html  draft-ietf-sidrops-rpki-rsc.txt
example/: NOTES  SHA256  b42.econtent.der  b42.xml  b42_service_definition.json  checklist.sig
packaging/: constraints-idnits.txt  requirements-dev.txt  requirements-docs.txt  requirements-drafts.txt  requirements-lint.txt  requirements-test.txt  requirements-tox.txt  requirements-typecheck.txt
rpkimancer_sig/: conjure.py  eecert.py  sigobj.py
rpkimancer_sig/asn1/: RpkiSignedChecklist-2021.asn  RpkiSignedChecklist-2022.asn
tests/: test_library.py
(+133 files in other folders)
