[metadata]
name = rpkimancer-sig
description = A rpkimancer plugin providing support for Signed Checklists
long_description = file: README.md, LICENSE
keywords =
    rpki
    draft-ietf-sidrops-rpki-rsc
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    rpkimancer>=0.1.0, <0.2.0

[options.entry_points]
rpkimancer.asn1.modules =
    RpkiSignedChecklist-2021 = rpkimancer_sig.asn1
rpkimancer.sigobj =
    SignedChecklist = rpkimancer_sig.sigobj:SignedChecklist
rpkimancer.cli.conjure =
    ConjureChecklist = rpkimancer_sig.conjure:ConjureChecklist
