[metadata]
name = rpkimancer-sig
description = A rpkimancer plugin providing support for Signed Checklists
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
keywords =
    rpki
    draft-ietf-sidrops-rpki-rsc
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    rpkimancer>=0.2.0, <0.3.0

[options.entry_points]
rpkimancer.asn1.modules =
    RpkiSignedChecklist-2021 = rpkimancer_sig.asn1
rpkimancer.sigobj =
    SignedChecklist = rpkimancer_sig.sigobj:SignedChecklist
rpkimancer.cli.conjure =
    ConjureChecklist = rpkimancer_sig.conjure:ConjureChecklist
